--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </span> </h2>
                     <h4 class="main__slider-span">Content Manager</h4>
                   <p class="main__slider-text">
-                     My duties included creating, managing, and organizing website content to ensure clarity, accuracy, and engagement. I worked on structuring information effectively, optimizing readability, and maintaining content quality to meet project requirements.
+                    My duties included creating, managing, and organizing website content to ensure clarity, accuracy, and engagement. I focused on structuring information effectively, optimizing readability, and maintaining high content quality. Additionally, I ensured consistency, improved user accessibility, and collaborated to meet project requirements.
                   </p>
                 </div>
               </div>
