--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </span> </h2>
                     <h4 class="main__slider-span">Content Manager</h4>
                   <p class="main__slider-text">
-                    My duties included creating, managing, and organizing website content to ensure clarity, accuracy, and engagement. I focused on structuring information effectively, optimizing readability, and maintaining high content quality. Additionally, I ensured consistency, improved user accessibility, and collaborated to meet project requirements.
+                    My duties included creating, and organizing website content to ensure clarity, accuracy, and engagement.I focused on structuring information effectively, optimizing readability, and maintaining high content quality.Additionally, I ensured consistency,improved user accessibility to meet project requirements.
                   </p>
                 </div>
               </div>
@@ -182,8 +182,8 @@
                 <div>
                   <h2 class="main__tabs-title">Geographic Location, Population, Name, and Flag</h2>
                   <p class="main__tabs-text">Uzbekistan is a landlocked country located in Central Asia, bordered by Kazakhstan to the north, Kyrgyzstan and Tajikistan to the east, Afghanistan to the south, and Turkmenistan to the southwest. The capital city is Tashkent, and the country boasts a <span class="bold__txt">population</span>  of approximately 37 million people (as of 2024).
-                    <p class="main__tabs-text">Uzbekistan’s flag is composed of three horizontal stripes: <span class="blue__txt">blue</span>, white, and <span class="green__txt">green</span>, with a 
-                      <span class="bold__txt">red</span> vertical stripe at the hoist. In the top-left corner, there is a crescent moon and stars symbolizing the country’s Islamic heritage.</p>
+                    Uzbekistan’s flag is composed of three horizontal stripes: <span class="blue__txt">blue</span>, white, and <span class="green__txt">green</span>, with a 
+                      <span class="bold__txt">red</span> vertical stripe at the hoist. In the top-left corner, there is a crescent moon and stars symbolizing the country’s Islamic heritage.
                   </p>
                 </div>
                 <div>
@@ -324,7 +324,7 @@
                     <span class="blue__txt">Abdulla Qodiriy:</span> A prominent 20th-century writer known for his historical novels such as "O'tkan Kunlar," which depict life in pre-Soviet Uzbekistan..</p>
                 </div>
                 <div>
-                  <a href="#" class="main__tabs-btn">подробнее</a>
+                  <a href="#" class="main__tabs-btn">More</a>
                 </div>
               </div>
             </div>
